--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@sendgrid/mail": "^8.1.4",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.46.1",
+    "clsx": "^2.1.1",
     "googleapis": "^144.0.0",
+    "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
     "next": "14.1.0",
     "openai": "^4.72.0",
@@ -21,6 +24,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "stripe": "^17.3.1",
+    "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
