dashboard not crashing

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@sendgrid/mail": "^8.1.4",
+    "@sentry/nextjs": "^8.40.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/supabase-js": "^2.46.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.3.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
