--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@sendgrid/mail": "^8.1.4",
     "@sentry/nextjs": "^8.40.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.46.1",
     "clsx": "^2.1.1",
     "exceljs": "^4.3.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "openai": "^4.72.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
