--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "mermaid": "^11.4.0",
     "next": "^14.1.0",
     "openai": "^4.72.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-markdown": "^8.0.7",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
