--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@sendgrid/mail": "^8.1.4",
-    "@sentry/nextjs": "^8.40.0",
+    "@sentry/nextjs": "^8.41.0",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "exceljs": "^4.3.0",
     "googleapis": "^144.0.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
     "next": "^14.1.0",
