--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-markdown": "^8.0.7",
+    "reactflow": "^11.11.4",
     "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
