--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.46.1",
     "clsx": "^2.1.1",
+    "docx": "^9.1.0",
     "exceljs": "^4.3.0",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
@@ -26,6 +27,7 @@
     "next": "^14.1.0",
     "openai": "^4.73.1",
     "pdf-lib": "^1.17.1",
+    "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
