--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "html2canvas": "^1.4.1",
+    "latest": "^0.2.0",
     "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
     "next": "^14.1.0",
