--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:flow": "node --loader ts-node/esm scripts/test-flow.ts"
+    "test:flow": "node --loader ts-node/esm scripts/test-flow.ts",
+    "format": "prettier --write .",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@puppeteer/browsers": "^2.5.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-pdf/renderer": "^4.1.5",
     "@sendgrid/mail": "^8.1.4",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.46.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.1.0",
     "exceljs": "^4.3.0",
@@ -29,11 +35,7 @@
     "lucide-react": "^0.460.0",
     "mermaid": "^11.4.0",
     "next": "^14.1.0",
-    "next-auth": "^4.24.10",
-    "openai": "^4.73.1",
     "pdf-lib": "^1.17.1",
-    "pptxgenjs": "^3.12.0",
-    "puppeteer-core": "^23.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
@@ -41,21 +43,28 @@
     "react-markdown": "^8.0.7",
     "reactflow": "^11.11.4",
     "stripe": "^17.3.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/node": "^20.17.6",
+    "@types/dompurify": "^3.0.5",
+    "@types/node": "^20.17.10",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
