--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:flow": "node --loader ts-node/esm scripts/test-flow.ts",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
     "format": "prettier --write .",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit"
@@ -49,6 +50,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.17.10",
     "@types/react": "^18.2.55",
@@ -56,16 +58,21 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.20",
+    "chalk": "^4.1.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.2",
+    "playwright": "^1.49.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
