--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:ui": "playwright test --ui",
     "format": "prettier --write .",
     "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -50,11 +51,14 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@playwright/test": "^1.49.1",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.17.10",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/stripe": "^8.0.416",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.20",
@@ -65,7 +69,9 @@
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
+    "lint-staged": "^15.2.11",
     "node-fetch": "^3.3.2",
     "playwright": "^1.49.1",
     "postcss": "^8.4.49",
@@ -73,6 +79,6 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
